# quagga

./: .clang-format  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
bgpd/: Makefile.am  Makefile.in  bgp_advertise.c  bgp_advertise.h  bgp_aspath.c  bgp_aspath.h  bgp_attr.c  bgp_attr.h  bgp_btoa.c  bgp_clist.c  bgp_clist.h  bgp_community.c  bgp_community.h  bgp_damp.c  bgp_damp.h  bgp_debug.c  bgp_debug.h  bgp_dump.c  bgp_dump.h  bgp_ecommunity.c  bgp_ecommunity.h  bgp_encap.c  bgp_encap.h  bgp_encap_tlv.c  bgp_encap_tlv.h  bgp_encap_types.h  bgp_filter.c  bgp_filter.h  bgp_fsm.c  bgp_fsm.h  bgp_lcommunity.c  bgp_lcommunity.h  bgp_main.c  bgp_mpath.c  bgp_mpath.h  bgp_mplsvpn.c  bgp_mplsvpn.h  bgp_network.c  bgp_network.h  bgp_nexthop.c  (+22 more)
doc/: Makefile.am  Makefile.in  quagga.info  quagga.info-1  version.texi
fpm/: Makefile.in  fpm.h  fpm_pb.h
isisd/: Makefile.in  dict.c  dict.h  isis_adjacency.c  isis_adjacency.h  isis_bpf.c  isis_circuit.c  isis_circuit.h  isis_common.h  isis_constants.h  isis_csm.c  isis_csm.h  isis_dlpi.c  isis_dr.c  isis_dynhn.c  isis_dynhn.h  isis_events.c  isis_events.h  isis_flags.c  isis_flags.h  isis_lsp.c  isis_lsp.h  isis_main.c  isis_misc.c  isis_misc.h  isis_network.h  isis_pdu.c  isis_pdu.h  isis_pfpacket.c  isis_redist.c  isis_redist.h  isis_route.c  isis_route.h  isis_routemap.c  isis_spf.c  isis_spf.h  isis_te.c  isis_te.h  isis_tlv.c  isis_tlv.h  (+7 more)
lib/: EventNew.c  EventNew.h  Makefile.am  Makefile.in  MemoryNew.c  MemoryNew.h  agentx.c  buffer.c  buffer.h  checksum.c  command.c  command.h  daemon.c  if.c  (+78 more)
(+329 files in other folders)
