## Process this file with automake to produce Makefile.in.

SUBDIRS = lib @ZEBRA@ @BGPD@ @RIPD@ @RIPNGD@ @OSPFD@ @OSPF6D@ @ISISD@ @PIMD@

DIST_SUBDIRS = lib zebra bgpd ripd ripngd ospfd ospf6d isisd pimd

EXTRA_DIST = aclocal.m4 SERVICES TODO REPORTING-BUGS INSTALL.quagga.txt tools/multiple-bgpd.sh
